--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "homepage": "http://ionicframework.com/",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "ng serve --proxy-config proxy.conf.json",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
@@ -23,14 +23,17 @@
     "@ionic-native/camera": "^5.0.0-beta.21",
     "@ionic-native/card-io": "^5.0.0-beta.21",
     "@ionic-native/core": "5.0.0-beta.21",
+    "@ionic-native/http": "^5.0.0-beta.21",
     "@ionic-native/splash-screen": "5.0.0-beta.21",
     "@ionic-native/status-bar": "5.0.0-beta.21",
     "@ionic/angular": "4.0.0-beta.16",
     "@ionic/pro": "2.0.3",
     "card.io.cordova.mobilesdk": "2.1.0",
     "cordova-android": "7.1.4",
+    "cordova-plugin-advanced-http": "2.0.1",
     "cordova-plugin-camera": "4.0.3",
     "cordova-plugin-device": "^2.0.2",
+    "cordova-plugin-file": "6.0.1",
     "cordova-plugin-ionic": "^5.2.7",
     "cordova-plugin-ionic-keyboard": "^2.1.3",
     "cordova-plugin-ionic-webview": "^2.2.5",
@@ -38,6 +41,7 @@
     "cordova-plugin-statusbar": "^2.4.2",
     "cordova-plugin-whitelist": "^1.3.3",
     "core-js": "^2.5.4",
+    "ngx-xml2json": "^1.0.2",
     "rxjs": "~6.3.3",
     "zone.js": "~0.8.26"
   },
@@ -79,7 +83,8 @@
       },
       "cordova-plugin-ionic-keyboard": {},
       "cordova-plugin-camera": {},
-      "card.io.cordova.mobilesdk": {}
+      "card.io.cordova.mobilesdk": {},
+      "cordova-plugin-advanced-http": {}
     },
     "platforms": [
       "android"
